--- a/RNN/finance/[ScienceTeam]RNN_numpy_and_LSTM.ipynb
+++ b/RNN/finance/[ScienceTeam]RNN_numpy_and_LSTM.ipynb
@@ -13,6 +13,13 @@
    "source": [
     "**YBIGTA 10기 손진원**"
    ]
+  },  
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Ref : http://aikorea.org/blog/rnn-tutorial-2/**"
+   ]
   },
   {
    "cell_type": "code",
