Add explanation for cost function of logistic regression

--- a/RNN/nlp/구현/텐서플로우 기초_번외편.ipynb
+++ b/RNN/nlp/구현/텐서플로우 기초_번외편.ipynb
@@ -83,6 +83,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "cost는 우리가 세운 가설(y 추정치)에서 실제 Y값을 뺀 것에 제곱을 한 뒤, 각각을 모두 더하고 이에 대한 평균을 내겠다는 것이다.\n",
+    "\n",
+    "우리가 세운 가설이 실제 Y값과 비슷하다면 제곱되는 수의 크기가 작으므로 cost는 작아질 것이고 반대라면 cost가 커질 것이다."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {
@@ -95,6 +104,26 @@
     "# Minimize function\n",
     "optimizer = tf.train.GradientDescentOptimizer(learning_rate=1e-5)\n",
     "train = optimizer.minimize(cost)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "실행시키기 전에 반드시 tf.global_variables_initializer()로 초기화를 해줘야 에러가 나지 않는다.\n",
+    "\n",
+    "with tf.Session() as sess과 같이 쓴 이유는 session은 열고 닫는 과정을 거쳐야 되는데 저렇게 쓰게 되면 일일이 세션을 열고 닫지 않아도 된다!"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "밑에서 '_'과 뭔지 궁금할 수 있을 것이다.\n",
+    "\n",
+    "_에 해당하는 것은 train이다. train의 값은 run을 해줘야 하지만 우리가 나중에 print를 한다든지 쓸 값이 아니다.\n",
+    "\n",
+    "그래서 한꺼번에 run 해줄 때,cost와 hypothesis는 쓰지만 train은 쓰지 않으므로 '_'를 쓴 것이다."
    ]
   },
   {
@@ -369,6 +398,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- logistic regression은 input이 들어왔을 때, 결과가 0이냐 1이냐를 판단하는 모델이다."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 17,
    "metadata": {
@@ -426,6 +462,21 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "이쯤에서 의문이 드는 게 placeholder와 Variable의 차이일 것이다.\n",
+    "\n",
+    "두 개 모두 변수를 담는 그릇이지만 조금 다르다.\n",
+    "\n",
+    "placeholder에는 실제 training data를 넣는다. \n",
+    "\n",
+    "Variable에는 weight와 bias를 넣는다.\n",
+    "\n",
+    "즉, placeholder에는 update가 필요없는 data가 들어가는 것이고 variable에는 update가 필요한 data가 들어가는 것이다."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 21,
    "metadata": {
@@ -441,7 +492,40 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "cost 함수가 이렇게 되는 이유는 그래프를 통해 살펴보는 것이 이해가 더 쉬울 것이다"
+    "cost 함수가 이렇게 되는 이유는 그래프를 통해 살펴보는 것이 이해가 더 쉬울 것이다."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![cost](http://adit.io/imgs/logistic/log_graph.png)\n",
+    "이미지 출처: http://adit.io/posts/2016-03-13-Logistic-Regression.html"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "왼쪽 그래프 y = -logx , 오른쪽 그래프 y = -log(1-x)\n",
+    "\n",
+    "여기서 x는 예측 값(hypothesis)가 되고, y는 실제 값(Y)가 된다. (your prediction에서 100%에 해당하는 x 값이 1이다.)\n",
+    "\n",
+    "만약 실제 값이 1인데, 예측값을 0이라고 했다면 우리는 cost를 쎄게 줘서 모델에게 잘못 예측을 했다는 것을 알려야 된다.\n",
+    "\n",
+    "반대로 실제 값이 1일 때, 예측값을 1이라고 했다면 모델이 정확한 것이므로 cost를 줄 필요가 없다. (cost를 모델에게 주는 벌(?)로 이해하면 되겠다.)\n",
+    "\n",
+    "위의 그래프는 이러한 상황을 그대로 반영했다.\n",
+    "\n",
+    "실제 값이 1일 때, 예측 값이 0에 가까우면 cost가 발산하고 1에 가까우면 cost는 거의 0에 수렴한다.\n",
+    "\n",
+    "실제 값이 0일 때는 정 반대이다.\n",
+    "\n",
+    "cost함수에서 log함수 앞에 Y를 붙인 이유는 Y가 1일때는 왼쪽 그래프만 고려하면 되고, Y가 0일때는 오른쪽 그래프만 고려하면 되기 때문이다.\n",
+    "\n",
+    "Y=0일때 왼쪽 함수 값은 0이 곱해지기 때문에 없어지고 Y=1일때는 오른쪽 함수 값이 없어진다.\n",
+    "\n",
+    "(밑의 cost 함수를 보면 -log가 아닌데 맨 앞으로 -를 빼냈다.)"
    ]
   },
   {
@@ -566,9 +650,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- 변수가 1개 있는 linear regression에서 맛보기로 opimizer를 비교했었다.\n",
-    "- 비록 해당 모델에서는 아주 기본적인 GradientDescent optimizer가 가장 안정적으로 로스를 줄였지만, 실제 쓰이는 모델과 흡사한 이번 모델에서는 그렇지 않을 것이다!\n",
+    "- 위의 multivariable linear regression과 optimizer만 다르다. \n",
+    "- 시작 지점이 모두 같기 때문에, step 0에서의 cost값이 모두 같다.\n",
     "- 최적의 결과를 위해 각 optimizer 별로 learing rate를 다르게 줬다."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "옵티마이저에 대해 알고 싶다면 다음의 링크를 참고하자.\n",
+    "\n",
+    "*옵티마이저 안내서*\n",
+    "https://github.com/YBIGTA/Deep_learning/blob/master/RNN/nlp/%EC%9D%B4%EB%A1%A0/Tensorflow%20Optimizer%20%EC%95%88%EB%82%B4%EC%84%9C.md"
    ]
   },
   {
@@ -830,6 +924,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Adadelta는 gradient를 누적시키는 optimizer이다.\n",
+    "\n",
+    "그러므로 과거의 data가 현재의 data에 영향을 준다는 것을 전제하고 있으므로 과거 data와 현재 data가 아무 관계가 없는 선형 모델에서 그렇게 좋지 않은 결과가 나온 것 같다."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Momentum"
    ]
   },
@@ -844,6 +947,13 @@
     "optimizer = tf.train.MomentumOptimizer(1e-5, 0.5)\n",
     "\n",
     "train = optimizer.minimize(cost)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "다른 optimizer와 달리 momentum은 learing rate말고도 momentum이라는 것을 설정해 줘야 한다. (위의 예시에서는 두 번째 parameter)"
    ]
   },
   {
@@ -1090,8 +1200,17 @@
     "\n",
     "왠만하면 Adam을 쓰도록 하자...!\n",
     "\n",
-    "하지만 sparse data에는 Adadelta도 시도해보자!"
+    "하지만 sparse data하고 과거의 데이터가 현재에도 영향을 미칠 때(자연어, 스피치, finance 등등) Adadelta도 시도해보자."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
