data loader 추가.

--- a/RNN/deep_speech/implementation/deep speech1 구현.ipynb
+++ b/RNN/deep_speech/implementation/deep speech1 구현.ipynb
@@ -210,7 +210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 61,
    "metadata": {
     "collapsed": true
    },
@@ -222,13 +222,15 @@
     "import scipy.signal\n",
     "import torch\n",
     "import torchaudio\n",
+    "import copy\n",
     "from torch.utils.data import DataLoader\n",
-    "from torch.utils.data import Dataset\n"
+    "from torch.utils.data import Dataset\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 62,
    "metadata": {
     "collapsed": true
    },
@@ -256,9 +258,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 65,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -281,24 +283,52 @@
     "    \"\"\"\n",
     "    parsing 함수. \n",
     "    Input : \n",
-    "        audio_path. 자료형 : dict\n",
+    "        audio_path. 자료형 : str or list\n",
     "    output : \n",
     "        해당 path의 spectogram, 자료형 : FloatTensor (MHz + 1, len)\n",
     "    \"\"\"\n",
     "    def parse_audio(self, audio_path):\n",
-    "        \n",
-    "        y = load_audio(audio_path)\n",
-    "        n_fft = int(self.sample_rate * self.window_size)\n",
-    "        win_length = n_fft\n",
-    "        hop_length = int(self.sample_rate * self.window_stride)\n",
-    "        # STFT\n",
-    "        D = librosa.stft(y, n_fft=n_fft, hop_length=hop_length,\n",
-    "                         win_length=win_length, window=self.window)\n",
-    "        spect, phase = librosa.magphase(D)\n",
-    "        # S = log(S+1)\n",
-    "        spect = np.log1p(spect)\n",
-    "        spect = torch.FloatTensor(spect)\n",
-    "        return spect"
+    "        # 하나의 path가 string형태로 들어온다면\n",
+    "        if(type(audio_path)==str):\n",
+    "            y = load_audio(audio_path)\n",
+    "            n_fft = int(self.sample_rate * self.window_size)\n",
+    "            win_length = n_fft\n",
+    "            hop_length = int(self.sample_rate * self.window_stride)\n",
+    "            # STFT\n",
+    "            D = librosa.stft(y, n_fft=n_fft, hop_length=hop_length,\n",
+    "                             win_length=win_length, window=self.window)\n",
+    "            spect, phase = librosa.magphase(D)\n",
+    "            # S = log(S+1)\n",
+    "            spect = np.log1p(spect)\n",
+    "            spect = torch.FloatTensor(spect)\n",
+    "            return spect\n",
+    "        # 굳이 필요 없음이 밝혀짐.\n",
+    "        # 여러개의 path가 list형태로 들어온다면 tmp에 저장\n",
+    "#        elif(type(audio_path)==list):\n",
+    "#            tmp = \"\"\n",
+    "#            for path in audio_path:\n",
+    "#                y = load_audio(path)\n",
+    "#                n_fft = int(self.sample_rate * self.window_size)\n",
+    "#                win_length = n_fft\n",
+    "#                hop_length = int(self.sample_rate * self.window_stride)\n",
+    "                # STFT\n",
+    "#                D = librosa.stft(y, n_fft=n_fft, hop_length=hop_length,\n",
+    "#                                 win_length=win_length, window=self.window)\n",
+    "#                spect, phase = librosa.magphase(D)\n",
+    "                # S = log(S+1)\n",
+    "#                spect = np.log1p(spect)\n",
+    "#                shpe = spect.shape\n",
+    "#                spect = spect.reshape((1,)+shpe)\n",
+    "#                if(tmp == \"\"):\n",
+    "#                    tmp = copy.deepcopy(spect)\n",
+    "#                else:\n",
+    "#                    tmp = np.append(tmp,spect,axis=0)\n",
+    "#                \n",
+    "#            spect = torch.FloatTensor(tmp)\n",
+    "#            return spect               \n",
+    "        else:\n",
+    "            print(\"wrong type of audiopath\")\n",
+    "            return -1"
    ]
   },
   {
@@ -310,7 +340,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 68,
    "metadata": {
     "collapsed": false
    },
@@ -319,17 +349,17 @@
      "data": {
       "text/plain": [
        "\n",
-       " 18.7441  17.1461  17.6008  ...   18.2615  11.8843  17.3191\n",
-       " 17.9347  18.3567  18.4088  ...   18.1678  18.2587  15.9493\n",
-       " 17.3988  17.9348  18.1413  ...   18.9098  17.7493  17.6598\n",
+       " 17.1550  18.0746  17.1650  ...   16.8284  15.2061  16.6281\n",
+       " 15.7563  17.7952  16.6147  ...   17.0611  17.5940  16.2806\n",
+       " 15.8626  17.1986  16.3381  ...   16.0992  17.9769  14.8790\n",
        "           ...               ⋱              ...            \n",
-       " 15.4377  17.1619  15.5005  ...   15.3234  15.6830  15.5769\n",
-       " 16.3273  16.5899  14.5669  ...   15.5692  15.3346  14.6444\n",
-       " 16.0336  16.2428  15.1358  ...   15.8261  14.1488  13.8953\n",
-       "[torch.FloatTensor of size 442x55]"
+       " 16.2552  14.8504  16.8628  ...   15.0124  14.9490  15.1515\n",
+       " 16.0438  15.2556  15.3839  ...   15.0961  14.9769  15.6644\n",
+       " 15.8748  14.8320  15.4217  ...   14.0025  14.5311  15.2816\n",
+       "[torch.FloatTensor of size 161x151]"
       ]
      },
-     "execution_count": 59,
+     "execution_count": 68,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -350,15 +380,56 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 69,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\n",
+       "  9.9548  12.5342  12.5185  ...   21.6904  21.7963  21.1424\n",
+       "  9.9540  12.6197  13.0785  ...   23.0774  21.1615  22.5326\n",
+       "  9.9516  12.7327  12.4498  ...   23.8243  23.5357  22.5847\n",
+       "           ...               ⋱              ...            \n",
+       "  1.5135  11.5833  11.7393  ...   15.0627  16.1645  16.5222\n",
+       "  2.5937  11.3482  11.6363  ...   15.1313  16.1363  16.5455\n",
+       "  2.7930  11.0813  12.4409  ...   15.2082  16.0953  16.4942\n",
+       "[torch.FloatTensor of size 442x11627]"
+      ]
+     },
+     "execution_count": 69,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# sample.wav 파일로 테스트. 본 파일은 an4 training set의 첫 번째 data이다.\n",
+    "audio_conf = {}\n",
+    "audio_conf[\"sample_rate\"] = torchaudio.load(\"./sample2.wav\")[1] #torchaudio의 2번째 return value는 해당 wav 파일의 rate이다.\n",
+    "audio_conf[\"window_size\"] = 0.02\n",
+    "audio_conf[\"window_stride\"] = 0.01\n",
+    "audio_conf[\"window\"] = scipy.signal.hamming\n",
+    "\n",
+    "#class 초기화\n",
+    "parser =SpectogramParser(audio_conf)\n",
+    "\n",
+    "#parsing된 데이터\n",
+    "parser.parse_audio(\"./sample2.wav\")"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Data loader 구현"
+    "## Dataset 구현"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 70,
    "metadata": {
     "collapsed": false
    },
@@ -410,7 +481,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 71,
    "metadata": {
     "collapsed": false
    },
@@ -429,7 +500,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 73,
    "metadata": {
     "collapsed": false
    },
@@ -438,23 +509,93 @@
      "data": {
       "text/plain": [
        "(\n",
-       "  17.3562  17.8143  17.9922  ...   16.5099  15.3367  15.2585\n",
-       "  16.6920  17.1653  17.2078  ...   16.3027  14.7407  14.5651\n",
-       "  16.4383  14.6181  14.7936  ...   15.8180  13.6684  15.2368\n",
+       "  19.2830  19.3306  19.0667  ...   19.8727  19.3608  18.9193\n",
+       "  18.7680  18.6099  18.4839  ...   19.1430  18.4066  17.5571\n",
+       "  18.0558  17.3596  17.7159  ...   17.1681  17.3474  16.8489\n",
        "            ...               ⋱              ...            \n",
-       "  12.9522  14.3281  11.9971  ...   14.3359  13.0826  12.4276\n",
-       "  14.6785  14.7595  14.6723  ...   14.9471  14.2619  10.8945\n",
-       "  14.2344  14.8060  14.7258  ...   14.9816  14.4666  12.0901\n",
-       " [torch.FloatTensor of size 161x71], [8, 16])"
+       "  15.5034  15.6864  16.3356  ...   14.3198  15.6247  15.4818\n",
+       "  12.8209  16.2215  16.3916  ...   15.3400  15.7537  14.3083\n",
+       "  16.0653  10.6976  15.2672  ...   14.5831  12.9391  15.2190\n",
+       " [torch.FloatTensor of size 161x71], [9, 6, 13, 17])"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 73,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "dataset[0]"
+    "# 지금 slice 가 먹지를 않는다. parse audio 가 list를 인식하지 못함. 근데 굳이 slice가 먹혀야 하는가?\n",
+    "dataset[1]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## DataLoader 구현"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "\"\"\"\n",
+    "collate fn 함수는 dataloader에서 minibatch를 만들어주는 default 함수이다.\n",
+    "음성인식에서 minibatch를 하는 기본적인 기조는, 일단 매 음성데이터의 사이즈가 다르므로, 가장 큰 음성인식 파일에 다른 파일들의 크기를 맞추는 것이다.\n",
+    "input :\n",
+    "    batch - List of dataset. dataset에서 샘플링한 것의 리스트이다.\n",
+    "output :\n",
+    "    inputs - 4 차원의 input. N x C X H * W. 따라서 본 deep speech에서는 C는 항상 1이다.\n",
+    "    targets - 1 차원의 label을 가진 IntTensor. 4번째 hidden layer를 지나면서 모든 minibatch는 concatenate된다. 따라서 1차원이다.\n",
+    "    input_percentages - 1차원의 각 sample의 가장 큰 sample에 비한 상대적인 크기. 즉, 얼마만큼의 0이 삽입되었는가를 알려준다. CTC loss를 계산하는데 사용.\n",
+    "    target_sizes - 각 글자 수.\n",
+    "\"\"\"\n",
+    "def _collate_fn(batch):\n",
+    "    def func(p):\n",
+    "        return p[0].size(1) # 길이.\n",
+    "\n",
+    "    longest_sample = max(batch, key=func)[0]\n",
+    "    freq_size = longest_sample.size(0)\n",
+    "    minibatch_size = len(batch)\n",
+    "    max_seqlength = longest_sample.size(1) #가장 긴 sample의 길이\n",
+    "    inputs = torch.zeros(minibatch_size, 1, freq_size, max_seqlength) # N X C X H X W\n",
+    "    input_percentages = torch.FloatTensor(minibatch_size) \n",
+    "    target_sizes = torch.IntTensor(minibatch_size)\n",
+    "    targets = []\n",
+    "    for x in range(minibatch_size):\n",
+    "        sample = batch[x]\n",
+    "        tensor = sample[0]\n",
+    "        target = sample[1]\n",
+    "        seq_length = tensor.size(1)\n",
+    "        inputs[x][0].narrow(1, 0, seq_length).copy_(tensor)\n",
+    "        input_percentages[x] = seq_length / float(max_seqlength)\n",
+    "        target_sizes[x] = len(target)\n",
+    "        targets.extend(target)\n",
+    "    targets = torch.IntTensor(targets)\n",
+    "    return inputs, targets, input_percentages, target_sizes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "\"\"\"\n",
+    "DataLoader.\n",
+    "enumerate로 돌아야 하며, i, (collate_fn output) 으로 iteration이 돈다.\n",
+    "\"\"\"\n",
+    "class AudioDataLoader(DataLoader):\n",
+    "    def __init__(self, *args, **kwargs):\n",
+    "        super(AudioDataLoader, self).__init__(*args, **kwargs)\n",
+    "        self.collate_fn = _collate_fn"
    ]
   },
   {
