모델링 완료

--- a/RNN/deep_speech/implementation/deep speech1 구현.ipynb
+++ b/RNN/deep_speech/implementation/deep speech1 구현.ipynb
@@ -481,7 +481,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 137,
    "metadata": {
     "collapsed": false
    },
@@ -591,6 +591,10 @@
     "\"\"\"\n",
     "DataLoader.\n",
     "enumerate로 돌아야 하며, i, (collate_fn output) 으로 iteration이 돈다.\n",
+    "초기화 input: \n",
+    "    dataset : spectogramdataset이 될 것\n",
+    "    minibatch size : default might be 20\n",
+    "    worker : loading을 위한 process의 갯수.\n",
     "\"\"\"\n",
     "class AudioDataLoader(DataLoader):\n",
     "    def __init__(self, *args, **kwargs):\n",
@@ -599,10 +603,24 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 138,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "loader = AudioDataLoader(dataset,2,4)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 2. modeling\n"
+    "## 2. modeling\n",
+    "\n",
+    "모델의 자세한 프로세스는 다음의 그림을 참고한다 <br>\n",
+    "[딥 스피치 모델](https://github.com/YBIGTA/Deep_learning/blob/master/RNN/deep_speech/implementation/%EB%AA%A8%EB%8D%B8_%EB%94%A5%EC%8A%A4%ED%94%BC%EC%B9%98.pdf)"
    ]
   },
   {
@@ -618,26 +636,25 @@
     "import torch\n",
     "import torch.nn as nn\n",
     "import torch.nn.functional as F\n",
-    "\n",
-    "\"\"\"\n",
-    "RNN 모델상에서의 사용되는 4번째 layer RNN.\n",
-    "deep speech(2 아닌 1)논문에서는 bidirectional RNN을 사용한다.\n",
-    "\"\"\"\n",
-    "supported_rnns = {\n",
-    "    'lstm': nn.LSTM,\n",
-    "    'rnn': nn.RNN,\n",
-    "    'gru': nn.GRU\n",
-    "}\n",
-    "supported_rnns_inv = dict((v, k) for k, v in supported_rnns.items()) #내가봤을 때 inverse는 딱히 필요없어."
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "IndentationError",
+     "evalue": "expected an indented block (<ipython-input-4-25b7fc9e6605>, line 45)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-4-25b7fc9e6605>\"\u001b[0;36m, line \u001b[0;32m45\u001b[0m\n\u001b[0;31m    \"\"\"\u001b[0m\n\u001b[0m       \n^\u001b[0m\n\u001b[0;31mIndentationError\u001b[0m\u001b[0;31m:\u001b[0m expected an indented block\n"
+     ]
+    }
+   ],
    "source": [
     "\"\"\"\n",
     "Collapses input of dim T*N*H to (T*N)*H, and applies to a module.\n",
@@ -645,9 +662,8 @@
     ":param module: Module to apply input to.\n",
     "\"\"\"\n",
     "\"\"\"\n",
-    "그니까 이게 minibatch를 하나의 string으로 만들어준다는 거지.\n",
-    "Q.  왜 굳이 그렇게하지? \n",
-    "그냥 long sentence training을 위하여?\n",
+    "총 두 번 사용된다. CNN의 output이 RNN으로 들어갈 때. RNN의 output이 FC로 들어갈 때. \n",
+    "그 필요성은 위의 딥 스피치 모델 그림에서 데이터가 transpose됨을 보면 알 수 있다.\n",
     "\"\"\"\n",
     "class SequenceWise(nn.Module):\n",
     "    def __init__(self, module):\n",
@@ -661,16 +677,10 @@
     "        x = x.view(t, n, -1)\n",
     "        return x\n",
     "\n",
-    "    def __repr__(self):\n",
-    "        tmpstr = self.__class__.__name__ + ' (\\n'\n",
-    "        tmpstr += self.module.__repr__()\n",
-    "        tmpstr += ')'\n",
-    "        return tmpstr\n",
-    "    \n",
     "\"\"\"\n",
     "이건 굉장히 typical 한 minibatch softmax.\n",
-    "각 data의 softmax를 torch.stack을 해야한다는거지.\n",
-    "Q. 근데 여기서 self.training은 어디서 오는거야\n",
+    "각 data의 softmax를 torch.stack을 해야한다는 부분이 했심.\n",
+    "QQQQQQQQQQQ 왜 if not self.training인가. \n",
     "\"\"\"\n",
     "class InferenceBatchSoftmax(nn.Module):\n",
     "    def forward(self, input_):\n",
@@ -680,14 +690,21 @@
     "        else:\n",
     "            return input_\n",
     "        \n",
+    "#class BatchSoftmax(nn.Module):\n",
+    "#    def forward(self, input_):\n",
+    "#        return torch.stack([F.log_softmax(input_[i] for i in range(batch_size))], 0)\n",
+    "        \n",
     "\"\"\"\n",
-    "batch구현\n",
-    "왜 batch normalization data를 sequencewise를 이 단에서 구현하느냐.\n",
-    "batch normalization에 대한 ref) https://shuuki4.wordpress.com/2016/01/13/batch-normalization-%EC%84%A4%EB%AA%85-%EB%B0%8F-%EA%B5%AC%ED%98%84/\n",
-    "이 sequencewise를 없애고 해보자 나중에.\n",
+    "batchnormalization + RNN 구현.\n",
+    "굳이 이런식으로 붙이는 이유는 sequencewise 때문에. \n",
+    "input : \n",
+    "    input_size - T * N * H 에서 H 의 값. 여기서 T 는 time, N 은 mini batch 갯수, H는 P * C(convolution layers)\n",
+    "    hidden_size - output의 값. \n",
+    "                  여기서 output은 input과 같지 않냐! 고 생각하는데, 단순히 hi = W1 * xi + W2 * xi 라고 했을 때 matrix의 행의 크기. \n",
+    "                  즉, T * N * H에서 H가 얼마나 압축될 것이냐의 의미.\n",
     "\"\"\"\n",
     "class BatchRNN(nn.Module):\n",
-    "    def __init__(self, input_size, hidden_size, rnn_type=nn.LSTM, bidirectional=False, batch_norm=True):\n",
+    "    def __init__(self, input_size, hidden_size, rnn_type=nn.RNN, bidirectional=True, batch_norm=True):\n",
     "        super(BatchRNN, self).__init__()\n",
     "        self.input_size = input_size\n",
     "        self.hidden_size = hidden_size\n",
@@ -695,9 +712,8 @@
     "        self.batch_norm = SequenceWise(nn.BatchNorm1d(input_size)) if batch_norm else None\n",
     "        self.rnn = rnn_type(input_size=input_size, hidden_size=hidden_size,\n",
     "                            bidirectional=bidirectional, bias=False)\n",
-    "        self.num_directions = 2 if bidirectional else 1\n",
+    "        self.num_directions = 2 if bidirectional else 1 # why do I need this?\n",
     "\n",
-    "    # Q. 그니까 RNN 의 hidden layer를 output으로 내는데, bidirectional의 경우에는 이 둘을 그냥 더한다?\n",
     "    def forward(self, x):\n",
     "        if self.batch_norm is not None:\n",
     "            x = self.batch_norm(x)\n",
@@ -714,21 +730,30 @@
     "collapsed": true
    },
    "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
    "source": [
     "\n",
     "\"\"\"\n",
-    "Q. labels의 역할은? 왜 여긴 abc밖에 없는거지?\n",
-    "Q. audio_conf는?\n",
+    "deep speech model. \n",
+    "Input : \n",
+    "    없어도 된다!\n",
     "\"\"\"\n",
     "class DeepSpeech(nn.Module):\n",
-    "    def __init__(self, rnn_type=nn.LSTM, labels=\"abc\", rnn_hidden_size=768, nb_layers=5, audio_conf=None,\n",
+    "    def __init__(self, rnn_type=nn.RNN, labels=\"_'ABCDEFGHIJKLMNOPQRSTUVWXYZ \", rnn_hidden_size=768, audio_conf=None,\n",
     "                 bidirectional=True):\n",
     "        super(DeepSpeech, self).__init__()\n",
     "\n",
     "        # model metadata needed for serialization/deserialization\n",
     "        if audio_conf is None:\n",
     "            audio_conf = {}\n",
-    "        self._version = '0.0.1'\n",
     "        self._hidden_size = rnn_hidden_size\n",
     "        self._hidden_layers = nb_layers\n",
     "        self._rnn_type = rnn_type\n",
@@ -754,14 +779,9 @@
     "        rnn_input_size *= 32\n",
     "\n",
     "        rnns = []\n",
-    "        rnn = BatchRNN(input_size=rnn_input_size, hidden_size=rnn_hidden_size, rnn_type=rnn_type,\n",
-    "                       bidirectional=bidirectional, batch_norm=False)\n",
-    "        rnns.append(('0', rnn))\n",
-    "        for x in range(nb_layers - 1):\n",
-    "            rnn = BatchRNN(input_size=rnn_hidden_size, hidden_size=rnn_hidden_size, rnn_type=rnn_type,\n",
-    "                           bidirectional=bidirectional)\n",
-    "            rnns.append(('%d' % (x + 1), rnn))\n",
-    "        self.rnns = nn.Sequential(OrderedDict(rnns))\n",
+    "        self.rnn = BatchRNN(input_size=rnn_input_size, hidden_size=rnn_hidden_size, rnn_type=rnn_type,\n",
+    "                       bidirectional=bidirectional, batch_norm=True)\n",
+    "\n",
     "        fully_connected = nn.Sequential(\n",
     "            nn.BatchNorm1d(rnn_hidden_size),\n",
     "            nn.Linear(rnn_hidden_size, num_classes, bias=False)\n",
@@ -778,96 +798,12 @@
     "        x = x.view(sizes[0], sizes[1] * sizes[2], sizes[3])  # Collapse feature dimension\n",
     "        x = x.transpose(1, 2).transpose(0, 1).contiguous()  # TxNxH\n",
     "\n",
-    "        x = self.rnns(x)\n",
+    "        x = self.rnn(x)\n",
     "\n",
     "        x = self.fc(x)\n",
     "        x = x.transpose(0, 1)\n",
     "        x = self.softmax(x)\n",
-    "        return x\n",
-    "\n",
-    "    @classmethod\n",
-    "    def load_model(cls, path, cuda=False):\n",
-    "        package = torch.load(path, map_location=lambda storage, loc: storage)\n",
-    "        model = cls(rnn_hidden_size=package['hidden_size'], nb_layers=package['hidden_layers'],\n",
-    "                    labels=package['labels'], audio_conf=package['audio_conf'],\n",
-    "                    rnn_type=supported_rnns[package['rnn_type']])\n",
-    "        model.load_state_dict(package['state_dict'])\n",
-    "        if cuda:\n",
-    "            model = torch.nn.DataParallel(model).cuda()\n",
-    "        return model\n",
-    "\n",
-    "    @staticmethod\n",
-    "    def serialize(model, optimizer=None, epoch=None, iteration=None, loss_results=None,\n",
-    "                  cer_results=None, wer_results=None, avg_loss=None, meta=None):\n",
-    "        model_is_cuda = next(model.parameters()).is_cuda\n",
-    "        model = model.module if model_is_cuda else model\n",
-    "        package = {\n",
-    "            'version': model._version,\n",
-    "            'hidden_size': model._hidden_size,\n",
-    "            'hidden_layers': model._hidden_layers,\n",
-    "            'rnn_type': supported_rnns_inv.get(model._rnn_type, model._rnn_type.__name__.lower()),\n",
-    "            'audio_conf': model._audio_conf,\n",
-    "            'labels': model._labels,\n",
-    "            'state_dict': model.state_dict()\n",
-    "        }\n",
-    "        if optimizer is not None:\n",
-    "            package['optim_dict'] = optimizer.state_dict()\n",
-    "        if avg_loss is not None:\n",
-    "            package['avg_loss'] = avg_loss\n",
-    "        if epoch is not None:\n",
-    "            package['epoch'] = epoch + 1  # increment for readability\n",
-    "        if iteration is not None:\n",
-    "            package['iteration'] = iteration\n",
-    "        if loss_results is not None:\n",
-    "            package['loss_results'] = loss_results\n",
-    "            package['cer_results'] = cer_results\n",
-    "            package['wer_results'] = wer_results\n",
-    "        if meta is not None:\n",
-    "            package['meta'] = meta\n",
-    "        return package\n",
-    "\n",
-    "    @staticmethod\n",
-    "    def get_labels(model):\n",
-    "        model_is_cuda = next(model.parameters()).is_cuda\n",
-    "        return model.module._labels if model_is_cuda else model._labels\n",
-    "\n",
-    "    @staticmethod\n",
-    "    def get_param_size(model):\n",
-    "        params = 0\n",
-    "        for p in model.parameters():\n",
-    "            tmp = 1\n",
-    "            for x in p.size():\n",
-    "                tmp *= x\n",
-    "            params += tmp\n",
-    "        return params\n",
-    "\n",
-    "    @staticmethod\n",
-    "    def get_audio_conf(model):\n",
-    "        model_is_cuda = next(model.parameters()).is_cuda\n",
-    "        return model.module._audio_conf if model_is_cuda else model._audio_conf\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "3"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "len(\"abc\")"
+    "        return x"
    ]
   }
  ],
