--- a/RNN/nlp/구현/텐서플로우_텐서보드.ipynb
+++ b/RNN/nlp/구현/텐서플로우_텐서보드.ipynb
@@ -18,8 +18,22 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "- 텐서 플로우의 구조, 텐서 값의 변화 같은 것들을 시각적으로 보여주는 기능을 한다."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "소스코드 출처\n",
     ": https://github.com/hunkim/DeepLearningZeroToAll/"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "multivariable linear regression의 코드를 그대로 가져왔다."
    ]
   },
   {
@@ -91,7 +105,7 @@
    "outputs": [],
    "source": [
     "with tf.name_scope(\"cost\") as scope:\n",
-    "    cost = -tf.reduce_mean(tf.square(hypothesis-Y))\n",
+    "    cost = tf.reduce_mean(tf.square(hypothesis-Y))\n",
     "    cost_summ = tf.summary.scalar(\"cost\", cost)\n",
     "\n",
     "with tf.name_scope(\"train\") as scope:\n",
@@ -100,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -109,15 +123,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0 -28245.8 [array([[-0.0036728 ],\n",
-      "       [-0.58689409],\n",
-      "       [ 0.40335032]], dtype=float32), array([[-0.281344]], dtype=float32)]\n",
-      "5000 -4.39768e+12 [array([[ 90.07256317],\n",
-      "       [ 89.48963165],\n",
-      "       [ 90.47967529]], dtype=float32), array([[-90.30943298]], dtype=float32)]\n",
-      "10000 -3.8733e+13 [array([[ 155.23564148],\n",
-      "       [ 154.65272522],\n",
-      "       [ 155.64274597]], dtype=float32), array([[-155.48309326]], dtype=float32)]\n"
+      "0 34871.2 [array([[-1.27761829],\n",
+      "       [-0.33085072],\n",
+      "       [ 0.42682689]], dtype=float32), array([[ 0.14722224]], dtype=float32)]\n",
+      "5000 0.285806 [array([[-1.81341398],\n",
+      "       [-0.90011162],\n",
+      "       [-0.21268174]], dtype=float32), array([[-0.69263703]], dtype=float32)]\n",
+      "10000 0.278761 [array([[-1.69697487],\n",
+      "       [-0.84367871],\n",
+      "       [-0.54235804]], dtype=float32), array([[-0.6530109]], dtype=float32)]\n"
      ]
     }
    ],
@@ -133,7 +147,7 @@
     "\n",
     "    for step in range(10001):\n",
     "        summary, _ = sess.run([merged_summary, train], feed_dict={X: x_data, Y: y_data})\n",
-    "        writer.add_summary(summary, global_step=step) #실제로 쓰는 부분.\n",
+    "        writer.add_summary(summary, global_step=step) \n",
     "\n",
     "        if step % 5000 == 0:\n",
     "            print(step, sess.run(cost, feed_dict={\n",
@@ -153,9 +167,9 @@
    "source": [
     "1. anaconda prompt를 관리자 권한으로 실행한다.(anaconda prompt를 우클릭하면 관리자 권한으로 실행할 수 있다.)\n",
     "2. activate tensorflow 입력\n",
-    "3. cd \"위에서 만든 파일이 들어있는 경로\" 입력\n",
+    "3. cd 위에서 만든 파일이 들어있는 경로 입력\n",
     "- ex) cd C:\\Users\\nhm\\ybigta\\DeepLearningZeroToAll-b00a345e02ca751bdfcca73787aa5fd97e56bd8b\n",
-    "4. 해당 경로로 이동된 걸 확인하고 tensorboard --logdir=\"log저장 directory\"\n",
+    "4. 해당 경로로 이동된 걸 확인하고 tensorboard --logdir=log저장 directory\n",
     "- ex) tensorboard --logdir=board/multivariable_linear_regression\n",
     "5. Starting TensorBoard b'54' at http://DESKTOP-16K2P34:6006 이러한 문장이 나오면 성공! 해당 웹 주소를 그대로 복사해서 들어가면 된다."
    ]
@@ -171,6 +185,7 @@
   }
  ],
  "metadata": {
+  "anaconda-cloud": {},
   "kernelspec": {
    "display_name": "Python [conda env:tensorflow]",
    "language": "python",
