--- a/RNN/nlp/구현/텐서플로우_텐서보드.ipynb
+++ b/RNN/nlp/구현/텐서플로우_텐서보드.ipynb
@@ -165,8 +165,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### 코드 실행 후"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "1. anaconda prompt를 관리자 권한으로 실행한다.(anaconda prompt를 우클릭하면 관리자 권한으로 실행할 수 있다.)\n",
-    "2. activate tensorflow 입력\n",
+    "2. activate tensorflow env입력\n",
     "3. cd 위에서 만든 파일이 들어있는 경로 입력\n",
     "- ex) cd C:\\Users\\nhm\\ybigta\\DeepLearningZeroToAll-b00a345e02ca751bdfcca73787aa5fd97e56bd8b\n",
     "4. 해당 경로로 이동된 걸 확인하고 tensorboard --logdir=log저장 directory\n",
@@ -175,13 +182,57 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 기능"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
-   "source": []
+   "source": [
+    "![graph](http://i.imgur.com/21cLV8m.png)\n",
+    "- 전체적인 구조가 어떤지 알 수 있다."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![layer](http://i.imgur.com/pHl6H2d.png)\n",
+    "- layer가 어떻게 구성되었는지 또한 볼 수 있다.\n",
+    "- 심지어 weight나 bias에 어떤 optimize를 쓰는 지도 나온다."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![graph](http://i.imgur.com/XORLdY2.png)\n",
+    "- 그래프의 x축은 step이다.\n",
+    "- bias와 weight가 시간이 지날 수록 어떻게 변화했는지 나타내준다."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![histogram](http://i.imgur.com/Yq7UpaE.png)\n",
+    "- 입체적으로 보여준다.\n",
+    "- 세로가 step이다.\n",
+    "- 위의 선형 그래프를 왼쪽으로 돌렸다고 생각하면 될 것 같다."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![cost](http://i.imgur.com/OPRu0Zf.png)\n",
+    "- 일일이 cost를 print할 필요 없이 그래프로 한 눈에 파악할 수 있다."
+   ]
   }
  ],
  "metadata": {
