--- a/RNN/finance/구현/finance_prj_0801-sk_hynix_add_feature_paremeter_setting.ipynb
+++ b/RNN/finance/구현/finance_prj_0801-sk_hynix_add_feature_paremeter_setting.ipynb
@@ -236,11 +236,18 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### sk 하이닉스 분석해보기"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 12,
    "metadata": {
     "collapsed": false,
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [
     {
@@ -1028,7 +1035,25 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### apply to korean stock (sk hynix)"
+    "## apply to korean stock (sk hynix)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "정규화  \n",
+    "적절한 learning rate를 찾아서 넣어도 input 데이터 간의 차이가 크면 학습이 제대로 안되는 경우가 있음  \n",
+    "정규화(normalization)을 통해 값을 변경  \n",
+    "  \n",
+    "정규화 함 수 중 하나인 MinMaxScaler() -> 모든 값을 0과 1사이로 만든다."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "MinMaxScaler()함수 -->   $\\frac{변량-최소값}{최대값-최소값}$ 을 반환"
    ]
   },
   {
