--- a/RNN/finance/구현/finance_prj_0801-sk_hynix_add_feature_paremeter_setting.ipynb
+++ b/RNN/finance/구현/finance_prj_0801-sk_hynix_add_feature_paremeter_setting.ipynb
@@ -1053,7 +1053,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "MinMaxScaler()함수 -->   $\\frac{변량-최소값}{최대값-최소값}$ 을 반환"
+    "분자 : 변량- 최소값  \n",
+    "분모 : 최대값 - 최소값"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## $\\frac{data-minValue}{maxValue-minValue}$"
    ]
   },
   {
