CTCLoss 설치법 업로드

--- a/RNN/deep_speech/implementation/deep speech1 구현.ipynb
+++ b/RNN/deep_speech/implementation/deep speech1 구현.ipynb
@@ -786,7 +786,7 @@
     "        self.softmax = InferenceBatchSoftmax()\n",
     "\n",
     "    def forward(self, x):\n",
-    "        x = self.coLnv(x)\n",
+    "        x = self.conv(x)\n",
     "\n",
     "        sizes = x.size()\n",
     "        x = x.view(sizes[0], sizes[1] * sizes[2], sizes[3])  # Collapse feature dimension\n",
@@ -804,14 +804,66 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Loss function 정의.\n",
+    "## 3. Loss function 정의.\n",
     "\n",
     "CTC loss를 정의하여야 한다. <br>\n",
     "[3 페이지 참조](https://github.com/YBIGTA/Deep_learning/blob/master/RNN/deep_speech/%EC%84%A4%EB%AA%85/Deep%20speech_%EC%83%81%ED%97%8C.pdf)\n",
     "\n",
     "현재 CTC loss는 pytorch에서 제공을 하고있지 않다. <br>\n",
     "\n",
-    "따라서 [torch wrapper file](https://github.com/baidu-research/warp-ctc/blob/master/torch_binding/binding.cpp)을 [pytorch 로 transpile](https://github.com/pytorch/extension-ffi) 해야한다. <br>"
+    "따라서 [torch wrapper file](https://github.com/baidu-research/warp-ctc/blob/master/torch_binding/binding.cpp)을 [pytorch 로 transpile](https://github.com/pytorch/extension-ffi) 해야한다. <br>\n",
+    "\n",
+    "자세한 방식은 본인이 작성한 [pytorch C extension](https://github.com/YBIGTA/Deep_learning/blob/master/RNN/deep_speech/implementation/pytorch_c_extension.ipynb)을 참조한다. <br>\n",
+    "\n",
+    "### 3-0. Installing torch.\n",
+    "\n",
+    "일단 baidu 의 warp ctc의 경우 [torch](http://torch.ch/)로 구현이 되어있기 때문에 torch를 설치한다. <br>\n",
+    "path : ~/torch <br>\n",
+    "\n",
+    "```bash\n",
+    "# sudo 없이 작성한다.\n",
+    "cd ~/ ; mkdir torch\n",
+    "git clone https://github.com/torch/distro.git ~/torch --recursive\n",
+    "cd ~/torch; bash install-deps;\n",
+    "./install.sh\n",
+    "source ~/.bashrc\n",
+    "```\n",
+    "\n",
+    "### 3-1. installing warp-ctc\n",
+    "baidu research center에서 [torch](http://torch.ch/) 프레임워크로 작성된 것을 가져온다. <br>\n",
+    "안타깝게도 윈도우에서는 지원하지 않는다.\n",
+    "\n",
+    "```bash\n",
+    "# 다운로드\n",
+    "git clone https://github.com/baidu-research/warp-ctc.git\n",
+    "cd warp-ctc\n",
+    "# build 디렉토리 생성\n",
+    "mkdir build\n",
+    "cd build\n",
+    "cmake ../\n",
+    "make\n",
+    "export CUDA_HOME=\"/usr/local/cuda\"\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "'return' outside function (__init__.py, line 59)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"/home/mappiness/anaconda3/envs/torch/lib/python3.6/site-packages/warpctc_pytorch/__init__.py\"\u001b[0;36m, line \u001b[0;32m59\u001b[0m\n\u001b[0;31m    return _CTC()(acts, labels, act_lens, label_lens)\u001b[0m\n\u001b[0m                                                     ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m 'return' outside function\n"
+     ]
+    }
+   ],
+   "source": [
+    "from warpctc_pytorch import CTCLoss"
    ]
   }
  ],
